# OpenCvPlateRecognize

./: .gitignore  CMakeLists.txt  README.md
WYOpenCvPlateRecognition/: AnnDiscern.cpp  AnnDiscern.h  CMakeLists.txt  ColorLocate.cpp  ColorLocate.h  PlateLocate.cpp  PlateLocate.h  PlateRecognize.cpp  PlateRecognize.h  SobelLocate.cpp  SobelLocate.h  SvmPredict.cpp  SvmPredict.h  WYOpenCvPlateRecognition.cpp  WYOpenCvPlateRecognition.h
